/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.airavata.mft.resource.stubs.odata.storage;

message ODataStorage {
    string storageId = 1;
    string baseUrl = 2;
    string name = 3;
}

message ODataStorageListRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message ODataStorageListResponse {
    repeated ODataStorage storages = 1;
}

message ODataStorageGetRequest {
    string storageId = 1;
}

message ODataStorageCreateRequest {
    string baseUrl = 1;
    string storageId = 2;
    string name = 3;
}

message ODataStorageUpdateRequest {
    string storageId = 1;
    string baseUrl = 2;
    string name = 3;
}

message ODataStorageUpdateResponse {
    string storageId = 1;
}

message ODataStorageDeleteRequest {
    string storageId = 1;
}

message ODataStorageDeleteResponse {
    bool status = 1;
}